--- a/alpha-movie/src/main/AndroidManifest.xml
+++ b/alpha-movie/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.alphamovie">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.alphamovie.lib">
+
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <supports-gl-texture android:name="GL_OES_compressed_ETC1_RGB8_texture" />
+    <supports-gl-texture android:name="GL_OES_compressed_paletted_texture" />
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
