Distribution gradle settings

--- a/alpha-movie/build.gradle
+++ b/alpha-movie/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'alpha-movie'
+
+    publishedGroupId = 'com.alphamovie.library'
+    libraryName = 'Alpha Movie'
+    artifact = 'alpha-movie'
+
+    libraryDescription = 'Android video player with alpha channel support'
+
+    siteUrl = 'https://github.com/pavelsemak/alpha-movie'
+    gitUrl = 'https://github.com/pavelsemak/alpha-movie.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'pavelsemak'
+    developerName = 'Pavel Semak'
+    developerEmail = 'pavel.semak.a@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -8,7 +32,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     buildTypes {
         release {
@@ -22,3 +46,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.1'
 }
+
+tasks.withType(Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
+}
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
