--- a/alpha-movie/build.gradle
+++ b/alpha-movie/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 ext {
-    bintrayRepo = 'maven'
+    bintrayRepo = 'alpha-movie'
     bintrayName = 'alpha-movie'
 
     publishedGroupId = 'com.alphamovie.library'
